--- a/src/Ldc/EventBundle/Resources/views/admin/list.html.twig
+++ b/src/Ldc/EventBundle/Resources/views/admin/list.html.twig
@@ -17,7 +17,7 @@
 				<li>
 					<div class="calendar-day"><span class="icon-day">{{event.dateEvent | date("d")}}</span></div>
 					<div class="calendar-info">
-						<span >{{event.dateEvent | date("H:i")}} : {{event.title}}.</span>
+						<span >{{event.dateEvent | date("G:i")}} : {{event.title}}.</span>
 						<span class="txt-legend-i">{{event.description}} </span>
 					</div>
 					<div class="bk-bt-tool">
