--- a/www/bundles/ldcwebsite/css/admin.css
+++ b/www/bundles/ldcwebsite/css/admin.css
@@ -299,6 +299,23 @@ h2 {
   margin-left:-10px;
   margin-bottom:10px;
 }
+h2 a {
+  text-transform:uppercase;
+  color:#f3dc78;
+  font-weight:bold;
+  font-family:"Times New Roman", serif;
+  font-size:22px;
+  -webkit-transition:all 0.2s linear;
+  -moz-transition:all 0.2s linear;
+  -o-transition:all 0.2s linear;
+  -ms-transition:all 0.2s linear;
+  transition:all 0.2s linear;
+}
+h2 a:hover {
+  text-decoration:underline;
+  text-shadow:0px 0px 7px #e6e6e6;
+  cursor:pointer;
+}
 h3 {
   color:#f3dc78;
   font-weight:bold;
@@ -358,11 +375,12 @@ header .border_header {
   border-top-right-radius:500px 5px;
   box-shadow:8px 0px 5px #e6e6e6;
 }
-#container-main nav ul li.bt-menu {
-  display:table-cell;
+nav ul li.bt-menu {
+  display:inline-block;
   background-image:url('../images/bt_light.png');
+  position:relative;
 }
-#container-main nav ul li.bt-menu a {
+nav ul li.bt-menu a {
   font-weight:bold;
   font-size:20px;
   color:#0e081b;
@@ -377,15 +395,37 @@ header .border_header {
   -ms-transition:all 0.2s linear;
   transition:all 0.2s linear;
 }
-#container-main nav ul li.bt-menu a:hover {
+nav ul li.bt-menu a:hover {
   background-color:rgba(250,250,250,0.6);
   box-shadow:0px 0px 8px #e6e6e6;
   color:#7c83a4;
 }
-#container-main nav ul li.bt-menu a:active {
+nav ul li.bt-menu a:active {
   background-color:rgba(22,48,41,0.3);
   box-shadow:0px 0px 8px #0e081b;
   color:#0e081b;
+}
+nav ul li.bt-menu:hover > ul { display:block; }
+nav ul li.bt-menu ul {
+  z-index:5;
+  display:none;
+  border:1px solid #b4b4b4;
+  box-shadow:0 1px 3px rgba(0,0,0,0.3);
+  border-radius:0px 0px 10px 10px;
+  left:0;
+  margin:0;
+  padding:0;
+  position:absolute;
+  top:48px;
+  width:140px;
+  background:#e1e1e1;
+  background:-moz-linear-gradient(top,#e1e1e1 2%,#f1f1f1 50%,#f6f6f6 100%);
+  background:-webkit-gradient(linear,left top,left bottom,color-stop(2%,#e1e1e1),color-stop(50%,#f1f1f1),color-stop(100%,#f6f6f6));
+  background:-webkit-linear-gradient(top,#e1e1e1 2%,#f1f1f1 50%,#f6f6f6 100%);
+  background:-o-linear-gradient(top,#e1e1e1 2%,#f1f1f1 50%,#f6f6f6 100%);
+  background:-ms-linear-gradient(top,#e1e1e1 2%,#f1f1f1 50%,#f6f6f6 100%);
+  background:linear-gradient(to bottom,#e1e1e1 2%,#f1f1f1 50%,#f6f6f6 100%);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#e1e1e1',endColorstr='#f6f6f6',GradientType=0);
 }
 #container-main #panel-head { margin-top:15px; }
 #container-main #panel-head .gn-panel-container {
@@ -659,14 +699,92 @@ form.form_event textarea {
   width:350px;
   padding:0px;
 }
+form.form_article {
+  width:1000px;
+  margin:40px;
+}
+form.form_article input[type="text"], form.form_article input[type="file"] {
+  color:black;
+  width:650px;
+}
+form.form_article textarea {
+  color:black;
+  width:650px;
+  height:250px;
+  padding:0px;
+}
 div#user-profile-show ul li span { display:inline-block; }
 div#user-profile-show ul li span:first-child { width:220px; }
+nav ul li.bt-menu {
+  display:inline-block;
+  background-image:url('../images/bt_light.png');
+  position:relative;
+}
+nav ul li.bt-menu a {
+  font-weight:bold;
+  font-size:20px;
+  color:#0e081b;
+  display:table-cell;
+  text-align:center;
+  vertical-align:middle;
+  width:140px;
+  height:48px;
+  -webkit-transition:all 0.2s linear;
+  -moz-transition:all 0.2s linear;
+  -o-transition:all 0.2s linear;
+  -ms-transition:all 0.2s linear;
+  transition:all 0.2s linear;
+}
+nav ul li.bt-menu a:hover {
+  background-color:rgba(250,250,250,0.6);
+  box-shadow:0px 0px 8px #e6e6e6;
+  color:#7c83a4;
+}
+nav ul li.bt-menu a:active {
+  background-color:rgba(22,48,41,0.3);
+  box-shadow:0px 0px 8px #0e081b;
+  color:#0e081b;
+}
+nav ul li.bt-menu:hover > ul { display:block; }
+nav ul li.bt-menu ul {
+  z-index:5;
+  display:none;
+  border:1px solid #b4b4b4;
+  box-shadow:0 1px 3px rgba(0,0,0,0.3);
+  border-radius:0px 0px 10px 10px;
+  left:0;
+  margin:0;
+  padding:0;
+  position:absolute;
+  top:48px;
+  width:140px;
+  background:#e1e1e1;
+  background:-moz-linear-gradient(top,#e1e1e1 2%,#f1f1f1 50%,#f6f6f6 100%);
+  background:-webkit-gradient(linear,left top,left bottom,color-stop(2%,#e1e1e1),color-stop(50%,#f1f1f1),color-stop(100%,#f6f6f6));
+  background:-webkit-linear-gradient(top,#e1e1e1 2%,#f1f1f1 50%,#f6f6f6 100%);
+  background:-o-linear-gradient(top,#e1e1e1 2%,#f1f1f1 50%,#f6f6f6 100%);
+  background:-ms-linear-gradient(top,#e1e1e1 2%,#f1f1f1 50%,#f6f6f6 100%);
+  background:linear-gradient(to bottom,#e1e1e1 2%,#f1f1f1 50%,#f6f6f6 100%);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#e1e1e1',endColorstr='#f6f6f6',GradientType=0);
+}
 #panel-head { margin:0px; }
-img.bt-tool {
+img.icon-tool {
   height:35px;
   width:35px;
 }
+img.icon-tool:hover {
+  background-color:rgba(250,250,250,0.6);
+  box-shadow:0px 0px 8px #e6e6e6;
+}
 .bt-validation { margin:10px 40px 0px 0px; }
+div.bk-icon-bt { margin:0 0 10px 0; }
+div.bk-icon-bt img { vertical-align:middle; }
+div.bk-icon-bt a {
+  line-height:30px;
+  height:30px;
+  display:inline-block;
+  margin:0;
+}
 body, #container-full, footer { width:100%; }
 header, nav, #panel-head {
   width:1080px;
@@ -677,23 +795,23 @@ header, nav, #panel-head {
   width:100%;
   background-color:rgba(14,8,27,0.7);
 }
-#container-content .users-list {
+#container-content .list-table {
   display:table;
   margin:0 auto;
 }
-#container-content .users-list h2 {
+#container-content .list-table h2 {
   width:300px;
   margin:0 auto;
 }
-#container-content .users-list div.msg-flash { text-align:center; }
-#container-content .users-list div.msg-flash p { color:#e6e6e6; }
-#container-content .users-list table {
+#container-content .list-table div.msg-flash { text-align:center; }
+#container-content .list-table div.msg-flash p { color:#e6e6e6; }
+#container-content .list-table table {
   border:1px solid #e6e6e6;
   padding:10px;
   background:#0e081b;
   margin:0 auto;
 }
-#container-content .users-list table caption {
+#container-content .list-table table caption {
   color:#e6e6e6;
   font-size:20px;
   text-decoration:underline;
@@ -701,26 +819,26 @@ header, nav, #panel-head {
   margin-right:auto;
   margin-bottom:10px;
 }
-#container-content .users-list table tr { border:1px inset white; }
-#container-content .users-list table tr:nth-child(2n+1) { background-color:rgba(182,105,108,0.2); }
-#container-content .users-list table tr:first-child { background-color:rgba(243,220,120,0.2); }
-#container-content .users-list table tr:hover { background-color:rgba(230,230,230,0.5); }
-#container-content .users-list table tr th {
+#container-content .list-table table tr { border:1px inset white; }
+#container-content .list-table table tr:nth-child(2n+1) { background-color:rgba(182,105,108,0.2); }
+#container-content .list-table table tr:first-child { background-color:rgba(243,220,120,0.2); }
+#container-content .list-table table tr:hover { background-color:rgba(230,230,230,0.5); }
+#container-content .list-table table tr th {
   color:#e6e6e6;
   padding:1px 2px;
 }
-#container-content .users-list table tr td {
+#container-content .list-table table tr td {
   color:#eae9c5;
   padding:1px 2px;
 }
-#container-content .users-list table tr td.edit { text-align:center; }
-#container-content .users-list table tr td.edit img {
-  height:18px;
-  width:30px;
+#container-content .list-table table tr td img.list-img {
+  height:55px;
+  width:70px;
 }
-#container-content .users-list table tr td.delete { text-align:center; }
-#container-content .users-list table tr td.delete input[type=image] {
-  height:18px;
+#container-content .list-table table tr td.edit { text-align:center; }
+#container-content .list-table table tr td.delete { text-align:center; }
+#container-content .list-table table tr td.delete input[type=image] {
+  height:30px;
   width:30px;
 }
 #calendar { padding:0px 0px 0px 20px; }
@@ -799,4 +917,10 @@ header, nav, #panel-head {
   -o-transform:scale(-1);
   -ms-transform:scale(-1);
   transform:scale(-1);
+}
+.img-article-full img {
+  margin:10px 0px;
+  width:550px;
+  height:300px;
+  border:4px solid gray;
 }
