--- a/www/bundles/ldcwebsite/css/formulaire.css
+++ b/www/bundles/ldcwebsite/css/formulaire.css
@@ -299,6 +299,23 @@ h2 {
   margin-left:-10px;
   margin-bottom:10px;
 }
+h2 a {
+  text-transform:uppercase;
+  color:#f3dc78;
+  font-weight:bold;
+  font-family:"Times New Roman", serif;
+  font-size:22px;
+  -webkit-transition:all 0.2s linear;
+  -moz-transition:all 0.2s linear;
+  -o-transition:all 0.2s linear;
+  -ms-transition:all 0.2s linear;
+  transition:all 0.2s linear;
+}
+h2 a:hover {
+  text-decoration:underline;
+  text-shadow:0px 0px 7px #e6e6e6;
+  cursor:pointer;
+}
 h3 {
   color:#f3dc78;
   font-weight:bold;
@@ -358,11 +375,12 @@ header .border_header {
   border-top-right-radius:500px 5px;
   box-shadow:8px 0px 5px #e6e6e6;
 }
-#container-main nav ul li.bt-menu {
-  display:table-cell;
+nav ul li.bt-menu {
+  display:inline-block;
   background-image:url('../images/bt_light.png');
+  position:relative;
 }
-#container-main nav ul li.bt-menu a {
+nav ul li.bt-menu a {
   font-weight:bold;
   font-size:20px;
   color:#0e081b;
@@ -377,15 +395,37 @@ header .border_header {
   -ms-transition:all 0.2s linear;
   transition:all 0.2s linear;
 }
-#container-main nav ul li.bt-menu a:hover {
+nav ul li.bt-menu a:hover {
   background-color:rgba(250,250,250,0.6);
   box-shadow:0px 0px 8px #e6e6e6;
   color:#7c83a4;
 }
-#container-main nav ul li.bt-menu a:active {
+nav ul li.bt-menu a:active {
   background-color:rgba(22,48,41,0.3);
   box-shadow:0px 0px 8px #0e081b;
   color:#0e081b;
+}
+nav ul li.bt-menu:hover > ul { display:block; }
+nav ul li.bt-menu ul {
+  z-index:5;
+  display:none;
+  border:1px solid #b4b4b4;
+  box-shadow:0 1px 3px rgba(0,0,0,0.3);
+  border-radius:0px 0px 10px 10px;
+  left:0;
+  margin:0;
+  padding:0;
+  position:absolute;
+  top:48px;
+  width:140px;
+  background:#e1e1e1;
+  background:-moz-linear-gradient(top,#e1e1e1 2%,#f1f1f1 50%,#f6f6f6 100%);
+  background:-webkit-gradient(linear,left top,left bottom,color-stop(2%,#e1e1e1),color-stop(50%,#f1f1f1),color-stop(100%,#f6f6f6));
+  background:-webkit-linear-gradient(top,#e1e1e1 2%,#f1f1f1 50%,#f6f6f6 100%);
+  background:-o-linear-gradient(top,#e1e1e1 2%,#f1f1f1 50%,#f6f6f6 100%);
+  background:-ms-linear-gradient(top,#e1e1e1 2%,#f1f1f1 50%,#f6f6f6 100%);
+  background:linear-gradient(to bottom,#e1e1e1 2%,#f1f1f1 50%,#f6f6f6 100%);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#e1e1e1',endColorstr='#f6f6f6',GradientType=0);
 }
 #container-main #panel-head { margin-top:15px; }
 #container-main #panel-head .gn-panel-container {
