--- a/src/Ldc/SurveyBundle/Resources/views/layout.html.twig
+++ b/src/Ldc/SurveyBundle/Resources/views/layout.html.twig
@@ -5,6 +5,11 @@
 	<link rel="stylesheet" href="{{ asset('bundles/ldcwebsite/css/formulaire.css') }}" type="text/css" />
 {% endblock %}
 
+{% block script %}
+	<script type="text/javascript" src="{{path_public}}js/jquery.js"></script>
+	<script type="text/javascript" src="{{path_public}}js/survey.js"></script>
+{% endblock %}
+
 
 {% block body %}
 	<section id="survey">
