--- a/src/Ldc/WebsiteBundle/Resources/views/layout_admin.html.twig
+++ b/src/Ldc/WebsiteBundle/Resources/views/layout_admin.html.twig
@@ -23,8 +23,8 @@
 		<header>
 			<div id="ldc-logo"><img src="{{path_img}}logo.png" alt=""/></div>
 			<div id="ldc-title">
-				<h1 title="Lightning Demons Chronicles">
-					<img src="{{path_img}}Lightning_demons_chronicles.png" alt="Lightning_demons_chronicles"/>
+				<h1 title="Vengeful Spirits evanescence">
+					<img src="{{path_img}}vengeful_spirits_evanescence.png" alt="Vengeful Spirits evanescence"/>
 				</h1>  
 			</div>	
 			<div class="border_header"></div>
@@ -45,6 +45,9 @@
 					</li><!--
 				--><li class="bt-menu-light">
 						<a href="{{path('ldceventbundle_list')}}">Evenements</a>
+					</li><!--
+				--><li class="bt-menu-light">
+						<a href="{{path('ldcsurveybundle_list')}}">Sondages</a>
 					</li><!--
 					{% if is_granted('ROLE_USER') %}
 					--><li class="bt-menu-light">
