--- a/src/Ldc/WebsiteBundle/Resources/views/Website/index.html.twig
+++ b/src/Ldc/WebsiteBundle/Resources/views/Website/index.html.twig
@@ -31,6 +31,7 @@
 {% block script %}	
 	{{ parent() }}
 	<script type="text/javascript" src="{{path_public}}js/jquery.scrollTo.js"></script>
+	<script type="text/javascript" src="{{path_public}}js/survey.js"></script>
 {% endblock %}
 
 {% block title %}
@@ -214,42 +215,20 @@
 		  <!-- *************** ------------------- _____________________ SONDAGE _____________________ ------------------ ***************-->		
 		<section id="survey">
 			
-			<h2>Sondage</h2>
+			<h2><a href="{{path('ldcwebsitebundle_surveys') }}">Sondage</a></h2>
 			
 			<div class="gn-panel-wrapper">
 				<div class="bdr-top-left"></div>
 				<div class="bdr-top-right"></div>
-				
 				<div class="gn-panel-container">
-					<div class="survey-question">    
-						<h3 class="title-small">Comptez-vous changer de PC avant la sortie de Diablo III (15 mai) ?</h3>
-					</div>
-						<form id="survey-data">
-							<div class="survey-answers">
-								<p>
-									<input id="survey-answer-1" type="radio" name="survey-answer" value="1"/>
-									<label for="survey-answer-1">Oui, ma config a plus de deux ans</label>
-									<div><div class="hr-line-left"></div></div>
-								</p>
-								<p>
-									<input id="survey-answer-2" type="radio" name="survey-answer" value="2"/>
-									<label for="survey-answer-2">Oui, ma config a entre un an et deux ans</label>
-									<div><div class="hr-line-left"></div></div>
-								</p>
-								<p>
-									<input id="survey-answer-3" type="radio" name="survey-answer" value="3"/>
-									<label for="survey-answer-3">Oui, ma config a moins d'un an</label>
-									<div><div class="hr-line-left"></div></div>
-								</p>
-								<p>
-									<input id="survey-answer-4" type="radio" name="survey-answer" value="5"/>
-									<label for="survey-answer-4">Non, ma config est trop récente</label>
-								</p>		
-							</div>
-							<div class="bt-wrapper-survey-validation">
-								<input type="submit" class="bt-gold" value="Vote" />
-							</div>
-						</form>
+				
+					{% block survey %}
+						{% if app.session.get('survey_answered') is null %}
+							{% include "LdcWebsiteBundle::includes/surveys/vote.html.twig" %}
+						{% else %}
+							{% include "LdcWebsiteBundle::includes/surveys/result.html.twig" %}
+						{% endif %}
+					{% endblock %} 
 					
 				</div><!-- ========== Fin de .panel-container -->		
 			</div><!-- ========== Fin de .panel-wrapper -->	
