--- a/src/Ldc/UserBundle/Resources/views/Profile/edit_content.html.twig
+++ b/src/Ldc/UserBundle/Resources/views/Profile/edit_content.html.twig
@@ -10,7 +10,7 @@
 		</div>
 		
 		<!-- Champs modifiables -->	
-		<div><span class="title-small-static">Informations a</span></div>
+		<div><span class="title-small-static">Mes infos personnelles:</span></div>
 		
 		<!-- ========== Champ Avatar -->	
 		<div>
