--- a/src/Ldc/WebsiteBundle/Resources/views/layout_admin.html.twig
+++ b/src/Ldc/WebsiteBundle/Resources/views/layout_admin.html.twig
@@ -49,7 +49,7 @@
 				--><li class="bt-menu-light">
 						<a href="{{path('ldcsurveybundle_list')}}">Sondages</a>
 					</li><!--
-					{% if is_granted('ROLE_USER') %}
+					{% if is_granted('ROLE_ADMIN') %}
 					--><li class="bt-menu-light">
 							<a href="{{path('ldc_user_admin_list')}}">Utilisateurs</a>
 						</li>
